# frontier

./: .gitignore  Cargo.toml  README.md
blockscout/: docker-compose-no-build-geth.yml  docker-compose-no-build-hardhat-network.yml  docker-compose.yml
blockscout/envs/: common-blockscout.env  common-smart-contract-verifier.env  common-visualizer.env
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: tests.rs
client/db/: Cargo.toml
client/db/src/: lib.rs
client/db/src/kv/: mod.rs  upgrade.rs
client/db/src/sql/: mod.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/sql/: mod.rs
client/rpc/: Cargo.toml
client/rpc/src/: lib.rs
client/rpc/src/eth/: execute.rs  state.rs
client/rpc/src/eth/cache/: lru_cache.rs  mod.rs
evm-tracing/: Cargo.toml
evm-tracing/evm_tracer/: Cargo.toml
evm-tracing/evm_tracer/src/: lib.rs
evm-tracing/ext/: Cargo.toml
evm-tracing/ext/src/: lib.rs
evm-tracing/primitives/rpc/debug/: Cargo.toml
evm-tracing/primitives/rpc/debug/src/: lib.rs
evm-tracing/primitives/rpc/evm-tracing-events/: Cargo.toml
evm-tracing/primitives/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
evm-tracing/primitives/rpc/txpool/: Cargo.toml
evm-tracing/primitives/rpc/txpool/src/: lib.rs
evm-tracing/rpc-core/debug/: Cargo.toml
evm-tracing/rpc-core/trace/: Cargo.toml
evm-tracing/rpc-core/txpool/: Cargo.toml
evm-tracing/rpc/debug/: Cargo.toml
evm-tracing/rpc/debug/src/: lib.rs
evm-tracing/rpc/trace/: Cargo.toml
evm-tracing/rpc/trace/src/: lib.rs
evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs
evm-tracing/src/listeners/: call_list.rs
evm-tracing/src/types/: block.rs  mod.rs  single.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs
frame/evm/: Cargo.toml
frame/evm-tx-replay/src/: lib.rs
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: tests.rs
frame/evm/src/: lib.rs
frame/evm/src/runner/: stack.rs
frame/migrate/: Cargo.toml
frame/migrate/src/: lib.rs
frame/uniques/: Cargo.toml
moonbeam/: Cargo.toml
moonbeam/client/evm-tracing/: Cargo.toml
moonbeam/client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs
moonbeam/client/rpc-core/debug/: Cargo.toml
moonbeam/client/rpc-core/trace/: Cargo.toml
moonbeam/client/rpc-core/txpool/: Cargo.toml
moonbeam/client/rpc-core/types/: Cargo.toml
moonbeam/client/rpc/debug/: Cargo.toml
moonbeam/client/rpc/debug/src/: lib.rs
moonbeam/client/rpc/finality/: Cargo.toml
moonbeam/client/rpc/manual-xcm/: Cargo.toml
moonbeam/client/rpc/trace/: Cargo.toml
moonbeam/client/rpc/trace/src/: lib.rs
moonbeam/client/rpc/txpool/: Cargo.toml
moonbeam/client/vrf/: Cargo.toml
moonbeam/primitives/ext/: Cargo.toml
moonbeam/primitives/rpc/debug/: Cargo.toml
moonbeam/primitives/rpc/evm-tracing-events/src/: lib.rs
moonbeam/primitives/xcm/: Cargo.toml
moonbeam/runtime/evm_tracer/: Cargo.toml
primitives/account/src/: lib.rs
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
template/node/: Cargo.toml
template/node/src/: chain_spec.rs  cli.rs  client.rs  command.rs  service.rs
template/node/src/rpc/: eth.rs  mod.rs  tracing.rs
template/runtime/: Cargo.toml
template/runtime/evm_tracer/: Cargo.toml
template/runtime/evm_tracer/src/: lib.rs
template/runtime/src/: evm_config.rs  lib.rs
zombienet/: config.toml
