[package]
name = "moonbeam-rpc-trace"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", features = [ "with-codec" ] }
ethereum-types = "0.14"
futures = { version = "0.3" }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"
tokio = { version = "1.10", features = [ "sync", "time" ] }
tracing = "0.1.34"

# Moonbeam
moonbeam-client-evm-tracing = { path = "../.." }
moonbeam-rpc-core-trace = { path = "../../rpc-core/trace" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }

# Substrate
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }

# Frontier
fc-consensus = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { workspace = true }
fp-rpc = { workspace = true }
